--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Filma — Netflix Style</title>
+<title>Filma — 2025</title>
 
 <style>
     body {
@@ -166,7 +166,7 @@
 </div>
 
 <div class="footer" id="footer">
-    Filma izveidota no Milanas, Ričarda, Katrīnas, Unas un Daniela K
+    Filma no Milānas K., Ričarda K., Katrīnas B., Unas B. un Daniela K.
 </div>
 
 <!-- JS -->
