--- a/index.html
+++ b/index.html
@@ -7,51 +7,41 @@
 
 <style>
     :root {
-        --real-vh: 100vh; /* будет заменён JS */
+        --real-vh: 100vh;
     }
 
     body {
         margin: 0;
         background: #000;
-        font-family: 'Segoe UI', Arial, sans-serif;
         color: white;
+        font-family: 'Segoe UI', Arial, sans-serif;
         overflow-x: hidden;
     }
 
-    body.lock {
-        overflow: hidden;
-        height: var(--real-vh);
-    }
-
-    @keyframes fade {
-        from { opacity:0; transform: translateY(20px); }
-        to { opacity:1; transform: translateY(0); }
-    }
-
-    /* ЛОГИН С ЧЕСТНЫМ ЦЕНТРОМ */
-    .center {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        height: var(--real-vh); /* ← вот это фиксирует ВСЁ */
+    /* LOGIN — фиксированный слой */
+    #login-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
         width: 100%;
-
+        height: var(--real-vh); /* честная высота */
+        display: flex;
+        justify-content: center;
+        align-items: center;
         padding: 20px;
         box-sizing: border-box;
-
-        animation: fade 0.8s ease;
+        background: #000;
+        z-index: 9999;
+        overflow: hidden; /* важный фикс */
     }
 
     .login-box {
         width: 100%;
         max-width: 360px;
-
-        background: rgba(20,20,20,0.9);
+        background: rgba(20, 20, 20, 0.95);
         padding: 35px;
         border-radius: 12px;
         border: 1px solid rgba(255,255,255,0.05);
-        box-shadow: 0 0 25px rgba(229,9,20,0.25);
     }
 
     h2 {
@@ -65,9 +55,9 @@
     input {
         width: 100%;
         padding: 14px;
-        border: none;
-        border-radius: 6px;
         margin: 10px 0;
+        border-radius: 6px;
+        border: none;
         background: #333;
         color: white;
         font-size: 16px;
@@ -76,86 +66,57 @@
     button {
         width: 100%;
         padding: 14px;
-        margin-top: 10px;
+        background: #e50914;
         border: none;
         border-radius: 6px;
         font-size: 18px;
-        background: #e50914;
         color: white;
         cursor: pointer;
-        transition: 0.25s;
     }
 
-    button:hover {
-        background: #f6121d;
-        transform: scale(1.03);
-        box-shadow: 0 0 20px rgba(229,9,20,0.5);
-    }
-
+    /* MOVIE PAGE */
     .media-page {
         display: none;
         padding: 25px;
-        margin-bottom: 60px;
-        animation: fade 0.8s ease;
+        margin-bottom: 80px;
     }
 
     .info-box {
         background: linear-gradient(135deg, #141414, #0d0d0d);
-        border-radius: 12px;
         padding: 25px;
-        border: 1px solid rgba(255,255,255,0.07);
+        border-radius: 12px;
         margin-bottom: 25px;
-        box-shadow: 0 0 30px rgba(0,0,0,0.4);
-    }
-
-    .info-box h3 {
-        font-size: 26px;
-        margin-bottom: 10px;
-    }
-
-    .info-box p {
-        font-size: 17px;
-        opacity: 0.9;
-        margin: 4px 0;
     }
 
     video {
         width: 100%;
         border-radius: 10px;
-        box-shadow: 0 0 25px rgba(0,0,0,0.8);
     }
 
-    #no-video {
-        text-align: center;
-        opacity: 0.8;
-        font-size: 20px;
-        margin-top: 10px;
-    }
-
+    /* FOOTER */
     .footer {
         text-align: center;
         opacity: 0.45;
         font-size: 13px;
-        padding: 15px 10px;
-        letter-spacing: .5px;
+        padding: 15px;
         display: none;
     }
 </style>
 </head>
 
-<body class="lock">
+<body>
 
-<div class="center" id="login-screen">
+<!-- LOGIN -->
+<div id="login-screen">
     <div class="login-box">
         <h2>Pieslēgšanās</h2>
-
         <input id="login" placeholder="Lietotājvārds">
         <input id="password" type="password" placeholder="Parole">
-
         <button onclick="auth()">Ienākt</button>
     </div>
 </div>
 
+<!-- MOVIE PAGE -->
 <div class="media-page" id="media-screen">
 
     <div class="info-box">
@@ -178,7 +139,7 @@
 </div>
 
 <script>
-/* <<< ВОТ ЭТО ЧИНИТ ANDROID CHROME 100% >>> */
+/* Честная высота экрана */
 function fixHeight() {
     document.documentElement.style.setProperty(
         "--real-vh",
@@ -188,25 +149,28 @@ function fixHeight() {
 fixHeight();
 window.addEventListener("resize", fixHeight);
 
-/* LOGIN */
+/* AUTH */
 const correctLogin = "guest";
 const correctPassword = "film2025";
 
 function auth() {
-    const login = document.getElementById("login").value.trim();
-    const pass = document.getElementById("password").value.trim();
+    const login = document.getElementById('login').value.trim();
+    const pass = document.getElementById('password').value.trim();
 
     if (login === correctLogin && pass === correctPassword) {
+
         document.getElementById("login-screen").style.display = "none";
         document.getElementById("media-screen").style.display = "block";
         document.getElementById("footer").style.display = "block";
 
-        document.body.classList.remove("lock");
+        document.body.style.overflow = "auto";
+
     } else {
         alert("Nepareizs lietotājvārds vai parole!");
     }
 }
 
+/* Проверка видео */
 function checkVideo() {
     fetch("film.mp4", { method: "HEAD" })
         .then(res => {
@@ -220,7 +184,6 @@ function checkVideo() {
             document.getElementById("no-video").style.display = "block";
         });
 }
-
 checkVideo();
 </script>
 
